# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-Optimal_Tool_Environment"
version = "0.1.0"
description = "Optimal Tool Environment environment for OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.1",

    # Web server
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",

    # APIs / LLMs
    "openai",
    "groq",
    "tavily-python",

    # Env config
    "python-dotenv",

    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m Optimal_Tool_Environment.server.app
server = "Optimal_Tool_Environment.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["Optimal_Tool_Environment", "Optimal_Tool_Environment.server"]
package-dir = { "Optimal_Tool_Environment" = ".", "Optimal_Tool_Environment.server" = "server" }